// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionsEditor /> spec renders the component 1`] = `
<div
  class="euiPanel euiPanel--paddingSmall"
>
  <h3
    class="euiTitle euiTitle--xsmall"
  >
    Y-axis
  </h3>
  <div
    class="euiSpacer euiSpacer--s"
  />
  <div
    class="euiFormRow"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Position
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <select
            class="euiSelect"
            data-test-subj="options-editor-y-axis-position-select"
            id="random_html_id"
          >
            <option
              value="left"
            >
              Left
            </option>
            <option
              value="right"
            >
              Right
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch"
      >
        <button
          aria-checked="true"
          aria-labelledby="random_html_id"
          class="euiSwitch__button"
          data-test-subj="options-editor-y-axis-switch"
          id="random_html_id"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body"
          >
            <span
              class="euiSwitch__thumb"
            />
            <span
              class="euiSwitch__track"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon euiSwitch__icon--checked"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
            </span>
          </span>
        </button>
        <span
          class="euiSwitch__label"
          id="random_html_id"
        >
          Show Y-axis line
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch"
      >
        <button
          aria-checked="true"
          aria-labelledby="random_html_id"
          class="euiSwitch__button"
          data-test-subj="options-editor-y-axis-label-switch"
          id="random_html_id"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body"
          >
            <span
              class="euiSwitch__thumb"
            />
            <span
              class="euiSwitch__track"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiIcon-isLoading euiSwitch__icon euiSwitch__icon--checked"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
            </span>
          </span>
        </button>
        <span
          class="euiSwitch__label"
          id="random_html_id"
        >
          Show Y-axis label
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Label
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            class="euiFieldText"
            data-test-subj="options-editor-y-axis-label-input"
            id="random_html_id"
            placeholder="Label"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<OptionsEditor /> spec renders the component with different options 1`] = `
<div
  class="euiPanel euiPanel--paddingSmall"
>
  <h3
    class="euiTitle euiTitle--xsmall"
  >
    Y-axis
  </h3>
  <div
    class="euiSpacer euiSpacer--s"
  />
  <div
    class="euiFormRow"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Position
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <select
            class="euiSelect"
            data-test-subj="options-editor-y-axis-position-select"
            id="random_html_id"
          >
            <option
              value="left"
            >
              Left
            </option>
            <option
              value="right"
            >
              Right
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 01-.768 0L2.93 5.158a.552.552 0 00-.771 0 .53.53 0 000 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 000-.76.552.552 0 00-.771 0z"
                  fill-rule="non-zero"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch"
      >
        <button
          aria-checked="true"
          aria-labelledby="random_html_id"
          class="euiSwitch__button"
          data-test-subj="options-editor-y-axis-switch"
          id="random_html_id"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body"
          >
            <span
              class="euiSwitch__thumb"
            />
            <span
              class="euiSwitch__track"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiSwitch__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.293 8L3.146 3.854a.5.5 0 11.708-.708L8 7.293l4.146-4.147a.5.5 0 01.708.708L8.707 8l4.147 4.146a.5.5 0 01-.708.708L8 8.707l-4.146 4.147a.5.5 0 01-.708-.708L7.293 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiSwitch__icon euiSwitch__icon--checked"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12a.502.502 0 01-.354-.146l-4-4a.502.502 0 01.708-.708L6.5 10.793l6.646-6.647a.502.502 0 01.708.708l-7 7A.502.502 0 016.5 12"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </button>
        <span
          class="euiSwitch__label"
          id="random_html_id"
        >
          Show Y-axis line
        </span>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch"
      >
        <button
          aria-checked="false"
          aria-labelledby="random_html_id"
          class="euiSwitch__button"
          data-test-subj="options-editor-y-axis-label-switch"
          id="random_html_id"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body"
          >
            <span
              class="euiSwitch__thumb"
            />
            <span
              class="euiSwitch__track"
            >
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiSwitch__icon"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.293 8L3.146 3.854a.5.5 0 11.708-.708L8 7.293l4.146-4.147a.5.5 0 01.708.708L8.707 8l4.147 4.146a.5.5 0 01-.708.708L8 8.707l-4.146 4.147a.5.5 0 01-.708-.708L7.293 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="euiIcon euiIcon--medium euiSwitch__icon euiSwitch__icon--checked"
                focusable="false"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12a.502.502 0 01-.354-.146l-4-4a.502.502 0 01.708-.708L6.5 10.793l6.646-6.647a.502.502 0 01.708.708l-7 7A.502.502 0 016.5 12"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </span>
        </button>
        <span
          class="euiSwitch__label"
          id="random_html_id"
        >
          Show Y-axis label
        </span>
      </div>
    </div>
  </div>
</div>
`;
